--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ body {
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply py-2 px-4 bg-violet-700 text-white rounded-md shadow-md hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  }
+  .link {
+    @apply text-violet-300 hover:text-violet-400;
   }
 }
