--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+i {
+  font-style: normal;
+}
+
 @layer base {
   body {
     @apply text-slate-200;
