--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ i {
     @apply py-2 px-4 bg-violet-700 text-white rounded-md shadow-md hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
 
+  .btn-link {
+    @apply text-violet-300 hover:text-violet-400;
+  }
+
   .input {
     @apply bg-zinc-900 border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
   }
@@ -39,8 +43,8 @@ i {
     outline-width: 1px;
   }
 
-  .btn-link {
-    @apply text-violet-300 hover:text-violet-400;
+  .select {
+    @apply bg-zinc-800 border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
   }
 }
 
