--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,37 @@ i {
   .select {
     @apply bg-zinc-800 border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
   }
+
+  .spinner {
+    animation: rotate 2s linear infinite;
+
+    circle {
+      stroke: white;
+      stroke-linecap: round;
+      animation: dash 1.5s ease-in-out infinite;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
+      }
+      100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
+      }
+    }
+  }
 }
 
 @layer utilities {
