--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,15 @@ i {
 
 @layer base {
   body {
-    @apply text-zinc-200;
+    @apply text-zinc-300;
+  }
+
+  dialog {
+    @apply bg-zinc-800 text-zinc-400 rounded-md;
+
+    &::backdrop {
+      @apply bg-black bg-opacity-50;
+    }
   }
 }
 
@@ -39,7 +47,8 @@ i {
   }
 
   .input {
-    @apply bg-zinc-900 border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
+    @apply border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
+    background-color: #313135;
   }
   .input:hover,
   .input:focus {
