--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ i {
   font-style: normal;
 }
 
+svg {
+  display: inline;
+}
+
 @layer base {
   body {
     @apply text-zinc-300;
@@ -35,7 +39,7 @@ i {
 
 @layer components {
   .btn-primary {
-    @apply py-2 px-4 bg-violet-700 text-white rounded-md shadow-md hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+    @apply py-2 px-4 bg-violet-700 text-zinc-200 rounded-md shadow-md hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
   }
 
   .btn-secondary {
