add!: introduce solid-ui
The main reason I introduced it is that I don't want to have to deal
with the intricacies of component development. It was cool to try out
what HTML has to offer, and in the beginning where I had just a few
components it kinda made sense to just use HTML only, sprinkle a little
CSS and JS on top and by doing so limit the dependencies.

But as the scope of this project is growing, as well as the number of UI
widgets I have to create and support, creating these UI components and
putting them into a unified design framework is a black hole for my time
and frustrating experience at places too.

So the solution is some kind of a design system with out of the box
components. This would speak in favor of a component library, but since
I want to stay open to greater customizations, I decided for solid-ui, a
port of shadcn/ui to Solid. It allows me to set up a design system,
generate components and customize them heavily if needed. So it removes
quite some burden off of my shoulders.

It's not perfect, and I might end up using Tailwind UI or Flowbite, but
for now I'll got with solid-ui.

This is a breaking change since all the previous styles got purged,
which is ok because the styling wasn't great before, but I'll need to
rewrite all views to use the new components.

I also went in direction of both light and dark mode, since why the hell
not, I like both.

In case I decide to switch away from solid-ui, reverting this commit and
getting rid of the generated components should suffice.

--- a/src/index.css
+++ b/src/index.css
@@ -2,108 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  box-sizing: border-box;
-}
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 142.1 76.2% 36.3%;
+    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 142.1 76.2% 36.3%;
+    --radius: 0.5rem;
+  }
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-i {
-  font-style: normal;
-}
-
-svg {
-  display: inline;
+  [data-kb-theme='dark'] {
+    --background: 20 14.3% 4.1%;
+    --foreground: 0 0% 95%;
+    --card: 24 9.8% 10%;
+    --card-foreground: 0 0% 95%;
+    --popover: 0 0% 9%;
+    --popover-foreground: 0 0% 95%;
+    --primary: 142.1 70.6% 45.3%;
+    --primary-foreground: 144.9 80.4% 10%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 12 6.5% 15.1%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 142.4 71.8% 29.2%;
+  }
 }
 
 @layer base {
+  * {
+    @apply border-border;
+  }
   body {
-    @apply text-zinc-300;
-  }
-
-  dialog {
-    @apply bg-zinc-800 text-zinc-400 rounded-md;
-
-    &::backdrop {
-      @apply bg-black bg-opacity-50;
-    }
+    @apply bg-background text-foreground;
+    font-feature-settings: 'rlig' 1, 'calt' 1;
   }
 }
 
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-violet-700 text-zinc-200 rounded-md shadow-md hover:bg-violet-800 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
-  }
-
-  .btn-secondary {
-    @apply py-2 px-4 bg-zinc-800 text-violet-400 rounded-md shadow-md hover:bg-zinc-900 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
-  }
-
-  .btn-link {
-    @apply text-violet-300 hover:text-violet-400;
-  }
-
-  .input {
-    @apply border rounded-md border-solid border-zinc-700 p-2 outline-violet-700;
-    background-color: #313135;
-  }
-  .input:hover,
-  .input:focus {
-    outline-style: solid;
-    outline-width: 1px;
-  }
-
-  .select {
-    @apply bg-zinc-800 border rounded-md border-none p-2 outline-violet-700;
-  }
-
-  .spinner {
-    animation: rotate 2s linear infinite;
-
-    circle {
-      stroke: white;
-      stroke-linecap: round;
-      animation: dash 1.5s ease-in-out infinite;
-    }
-
-    @keyframes rotate {
-      100% {
-        transform: rotate(360deg);
-      }
-    }
-
-    @keyframes dash {
-      0% {
-        stroke-dasharray: 1, 150;
-        stroke-dashoffset: 0;
-      }
-      50% {
-        stroke-dasharray: 90, 150;
-        stroke-dashoffset: -35;
-      }
-      100% {
-        stroke-dasharray: 90, 150;
-        stroke-dashoffset: -124;
-      }
-    }
+@media (max-width: 640px) {
+  .container {
+    @apply px-4;
   }
 }
 
-@layer utilities {
-  /* Credit to https://dev.to/derick1530/how-to-create-scrollable-element-in-tailwind-without-a-scrollbar-4mbd */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
-}
